@@ -233,9 +233,16 @@ subprojects {
     // top-level default is single process run since scalatest does not
     // spawn separate JVMs
     maxParallelForks = 1
+    minHeapSize '4g'
     maxHeapSize '4g'
-    jvmArgs '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC',
-            '-XX:+CMSClassUnloadingEnabled',  '-XX:MaxPermSize=512m', '-ea'
+    jvmArgs '-ea', '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC', '-XX:MaxNewSize=1g',
+            '-XX:+UseParNewGC', '-XX:+CMSClassUnloadingEnabled', '-XX:MaxPermSize=512m'
+    // for benchmarking
+    // minHeapSize '12g'
+    // maxHeapSize '12g'
+    // jvmArgs '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC', '-XX:MaxNewSize=2g',
+    //        '-XX:+UseParNewGC', '-XX:+CMSClassUnloadingEnabled', '-XX:MaxPermSize=512m'
+
     testLogging.exceptionFormat = 'full'
 
     List<String> suites = []
@@ -245,15 +252,15 @@ subprojects {
 
     def result = new StringBuilder()
     extensions.add(com.github.maiflai.ScalaTestAction.TESTRESULT, result)
-    extensions.add('testResult', { String name -> result.append(name) } )
+    extensions.add('testResult', { String name -> result.setLength(0); result.append(name) } )
 
     def output = new StringBuilder()
     extensions.add(com.github.maiflai.ScalaTestAction.TESTOUTPUT, output)
-    extensions.add('testOutput', { String name -> output.append(name) } )
+    extensions.add('testOutput', { String name -> output.setLength(0); output.append(name) } )
 
     def errorOutput = new StringBuilder()
     extensions.add(com.github.maiflai.ScalaTestAction.TESTERROR, errorOutput)
-    extensions.add('testError', { String name -> errorOutput.append(name) } )
+    extensions.add('testError', { String name -> errorOutput.setLength(0); errorOutput.append(name) } )
 
     // running a single scala suite
     if (rootProject.hasProperty('singleSuite')) {
@@ -271,8 +278,8 @@ subprojects {
   test {
     maxParallelForks = (2 * Runtime.getRuntime().availableProcessors())
     maxHeapSize '2g'
-    jvmArgs '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC',
-            '-XX:+CMSClassUnloadingEnabled', '-XX:MaxPermSize=384m', '-ea'
+    jvmArgs '-ea', '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC',
+            '-XX:+UseParNewGC', '-XX:+CMSClassUnloadingEnabled', '-XX:MaxPermSize=512m'
     testLogging.exceptionFormat = 'full'
 
     include '**/*.class'
@@ -723,6 +730,17 @@ task product(type: Zip) {
   }
 }
 
+task ec2Tar(type: Tar) {
+     dependsOn ':product'
+     from("cluster/ec2")
+     baseName = 'snappydata-ec2'
+     exclude "deploy/home/ec2-user/snappydata/servers"
+     exclude "deploy/home/ec2-user/snappydata/leads"
+     exclude "deploy/home/ec2-user/snappydata/locators"
+     exclude "deploy/home/ec2-user/snappydata/snappy-env.sh"
+     exclude "lib"
+}
+
 if (rootProject.hasProperty('copyToDir')) {
   task copyProduct(type: Copy, dependsOn: product) {
     from snappyProductDir
@@ -756,7 +774,7 @@ distZip {
 
 // use the task below to prepare final release bits
 task distProduct {
-  dependsOn product, distTar, distZip
+  dependsOn product, distTar, distZip, ec2Tar
 }
 
 def copyTestsCommonResources(def bdir) {
